--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="This is the official website of the Newsletter in St. Anthony's College, Kandy" />
+    <meta name="description" content="This is the official website of the Newsletter in St. Anthony's College, Kandy" />
     <meta name="author" content="Powered by Yoshitha Rathnayake, Antonian Media Unit" />
     <meta name="keywords" content="DECEMBER 2023 | SACK NEWSLETTER" />
 
@@ -128,6 +127,11 @@
         <div class="powered-by"><a href="https://www.yoshitha.tk" target="_blank" style="text-decoration: none;"><span
                     class="powered">Powered by </span><span class="name">Yoshitha Rathnayake</span></a></div>
         <div class="copyright">&copy; 2024 Antonian Media Unit, SACK</div>
+        <div class="social-media">
+            <a href="https://www.facebook.com/AntonianMedia/" target="_blank"><i class="fa-brands fa-facebook fa-lg px-2 icons"></i></a>
+            <a href="https://www.instagram.com/antonian_media_unit/" target="_blank"><i class="fa-brands fa-instagram fa-lg px-2 icons"></i></a>
+            <a href="https://www.youtube.com/@AntonianMediaUnit/" target="_blank"><i class="fa-brands fa-youtube fa-lg px-2 icons"></i></a>
+        </div>
     </div>
 
     <script>
@@ -159,6 +163,20 @@
             lines[slideIndex - 1].className += " active-line";
         }
     </script>
+
+    <!-- jsDelivr -->
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/f973136a32.js" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
