--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
     </div>
 
-    <marquee direction="right">SACK NEWSLETTER DECEMBER 2023 | POWERED BY YOSHITHA RATHNAYAKE | ANTONIAN MEDIA
-        UNIT</span></marquee>
+    <a href="#footer"><marquee direction="right">SACK NEWSLETTER DECEMBER 2023 | POWERED BY YOSHITHA RATHNAYAKE | ANTONIAN MEDIA
+        UNIT</span></marquee></a>
 
     <div class="slideshow-container">
         <div class="mySlides">
@@ -123,7 +123,7 @@
 
     <!-- Your Page Content Goes Here -->
 
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="powered-by"><a href="https://www.yoshitha.tk" target="_blank" style="text-decoration: none;"><span
                     class="powered">Powered by </span><span class="name">Yoshitha Rathnayake</span></a></div>
         <div class="copyright">&copy; 2024 Antonian Media Unit, SACK</div>
