--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
     <div class="header">
         <div class="logo-container">
-            <img src="assets/img/college logo.png" alt="Logo 1" class="logo1">
+            <a href="https://www.sack.edu.lk/" target="_blank"><img src="assets/img/college logo.png" alt="Logo 1" class="logo1"></a>
         </div>
         <div class="logo-container">
-            <img src="assets/img/sack.png" alt="Logo 2" class="logo2">
+            <a href="/"><img src="assets/img/sack.png" alt="Logo 2" class="logo2"></a>
         </div>
         <div class="logo-container">
-            <img src="assets/img/amu logo.png" alt="Logo 3" class="logo3">
+            <a href="http://acf.sack.edu.lk/" target="_blank"><img src="assets/img/amu logo.png" alt="Logo 3" class="logo3"></a>
         </div>
     </div>
 
